--- a/.gitignore
+++ b/.gitignore
@@ -59,4 +59,4 @@ sysinfo.txt
 crashlytics-build.properties
 
 .idea/.idea.hsm-wise2022-prototype101-ldacruz/.idea
-Assets/PolygonPrototype/
+Assets/_ThirdParty/
